# WarpSocket

./: .gitattributes  .gitignore  CLAUDE.md  KNOWN_BUGS.md  README.md  config.example.warpcfg  iniciar_tunel.bat  iniciar_tunel.ps1  instalar.bat  instalar.ps1
client/: pyproject.toml
client/tests/: test_app.py  test_config.py  test_logs.py  test_network.py  test_platforms.py  test_tray.py  test_tunnel.py  test_tunnel_manager.py  test_wireguard.py  test_wizard.py
client/warpsocket/: __main__.py  app.py  config.py  logs.py  main_window.py  network.py  tray.py  tunnel.py  uninstall.py  wireguard.py  wizard.py
installer/linux/: install.sh
installer/windows/: install.ps1
server/: pyproject.toml
server/tests/: test_cli.py  test_config.py  test_crypto.py  test_ip_pool.py  test_platforms.py  test_setup_wizard.py  test_warpcfg.py  test_wireguard.py
server/warpsocket_server/: __main__.py  cli.py  config.py  crypto.py  ip_pool.py  logs.py  server_app.py  server_manager.py  server_tray.py  server_window.py  setup_wizard.py  warpcfg.py  wireguard.py
