[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "warpsocket-client"
version = "0.0.1"
description = "Cliente de bandeja multiplataforma para tuneles WireGuard sobre WebSocket (wstunnel)"
requires-python = ">=3.11"
authors = [{ name = "Ferran Crespo", email = "ferrancrespofresneda@gmail.com" }]
keywords = ["wireguard", "wstunnel", "vpn", "tray", "tunnel"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Win32 (MS Windows)",
    "Environment :: X11 Applications",
    "Environment :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet",
    "Topic :: System :: Networking",
]
dependencies = [
    "pystray>=0.19",
    "customtkinter>=5.2",
    "Pillow>=10.0",
    "platformdirs>=4.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5",
    "black>=24.0",
    "pytest>=8.0",
]
build = [
    "pyinstaller>=6.0",
]

[project.gui-scripts]
warpsocket = "warpsocket.app:main"

[project.scripts]
warpsocket-uninstall = "warpsocket.uninstall:main"

[tool.hatch.build.targets.wheel]
packages = ["warpsocket"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "SIM"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
