[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "warpsocket-server"
version = "0.0.1"
description = "Servidor CLI para tuneles WireGuard sobre WebSocket (wstunnel)"
requires-python = ">=3.11"
authors = [{ name = "Ferran Crespo", email = "ferrancrespofresneda@gmail.com" }]
keywords = ["wireguard", "wstunnel", "vpn", "server", "tunnel"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Console",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet",
    "Topic :: System :: Networking",
]
dependencies = [
    "rich>=13.0",
    "cryptography>=42.0",
    "platformdirs>=4.0",
]

[project.optional-dependencies]
gui = [
    "customtkinter>=5.2",
    "pillow>=10.0",
    "pystray>=0.19",
]
dev = [
    "ruff>=0.5",
    "black>=24.0",
    "pytest>=8.0",
]

[project.scripts]
warpsocket-server = "warpsocket_server.cli:main"
warpsocket-server-gui = "warpsocket_server.server_app:main"

[tool.hatch.build.targets.wheel]
packages = ["warpsocket_server"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "SIM"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
